turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:14: error: type mismatch;
 found   : Int
 required: Char
		case 'R' => if(y==colors.length - 1){y=0}else{y+=1}
                                                               ^LangtonsAnt:16: error: type mismatch;
 found   : Int
 required: Char
		case 'L' => if(y==colors.length - 1){y=0}else{y+=1}
                                                               ^